# outlook-mcp-server

./: .flake8  .gitignore  README.md  list_latest_emails.py  outlook_mcp.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
src/: __init__.py
src/config/: __init__.py  config.properties  config_reader.py
src/tools/: __init__.py  outlook_tools.py
src/utils/: __init__.py  email_formatter.py  outlook_client.py
tests/: conftest.py  output_latest_emails_sample.py  test-shared-mailbox.py  test_config_reader.py  test_connection.py  test_email_formatter.py  test_get_latest_emails.py  test_tools.py
