[project]
name = "outlook-mcp-server"
version = "0.1.0"
description = "MCP server for Outlook mailbox access"
readme = "README.md"
requires-python = ">=3.8"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv"]
per-file-ignores = ["__init__.py:F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32com.*"
ignore_missing_imports = true
